updated client install

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:server": "cd ./server && npm run start:dev",
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "build": "cd ./client && npm run build",
-    "install:client": "cd ./client && npm i",
+    "install:client": "cd ./client && npm i --only=dev",
     "install:server": "cd ./server && npm i",
     "install": "npm run install:client && npm run install:server",
     "start": "cd ./server && npm start"
