--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev:client": "cd ./client && npm run dev",
     "dev:server": "cd ./server && npm run start:dev",
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-    "build": "cd ./client && npm run build",
-    "install:client": "cd ./client && NODE_ENV=development npm install --only=dev",
+    "heroku-postbuild": "cd ./client && npm run build",
+    "build": "cd ./client && NODE_ENV=development npm install --only=dev",
+    "install:client": "cd ./client && npm i",
     "install:server": "cd ./server && npm i",
     "install": "npm run install:client && npm run install:server",
     "start": "cd ./server && npm start"
