--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev:client": "cd ./client && npm run dev",
     "dev:server": "cd ./server && npm run start:dev",
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-    "heroku-postbuild": "cd ./client && NODE_ENV=development npm install --only=dev",
+    "dev": "concurrently \"npm run install:client\" \"npm run dev:server\"",
+    "heroku-postbuild": "npm run install:client && cd ./client && NODE_ENV=production npm install --only=dev",
     "build": "cd ./client && npm run build",
     "install:client": "cd ./client && npm i",
     "install:server": "cd ./server && npm i",
